# a2

./: .env  README.md  __init__.py  requirements.txt
Mypython app/: app.py  database.db  pyproject.toml
