[tool.poetry]
name = "mypython app"
version = "1.7.1"
description = ""
authors = ["Arnav Patil <arnavpatil455@gmail.com>"]
license = "2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



dependencies = [
    "flask",
    "flask-mail"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"